# resume-generator

./: .env.example  Dockerfile  LICENSE  README.md  docker-compose.yml  instructions.txt  pyproject.toml  verify_auth.py
api/: main.py
examples/: abdessamie_resume.yaml  complete_resume.yaml
examples/rendercv_output/: Abdessamie_El_Moubarki_CV.html  Abdessamie_El_Moubarki_CV.md  Abdessamie_El_Moubarki_CV.typ  Alexandra_Chen_CV.html  Alexandra_Chen_CV.md  Alexandra_Chen_CV.typ
tests/: test_api.py  test_resume_to_yaml.py  test_validation.py
web/: package.json  pnpm-lock.yaml
web/__tests__/: ai-prompt.test.ts  resume-types.test.ts  yaml-import.test.ts
web/app/: layout.tsx  page.tsx
web/components/: ai-prompt-dialog.tsx  footer.tsx  hero.tsx  yaml-editor.tsx  yaml-import-dialog.tsx
web/components/resume-form/: custom-sections-form.tsx  education-form.tsx  experience-form.tsx  personal-info-form.tsx  projects-form.tsx  skills-form.tsx
web/lib/: ai-prompt.ts  api.ts  resume-types.ts
web/public/: Resume.lottie
